src/testing_file_interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMERO

Grammar

Rule 0     S' -> fichero
Rule 1     fichero -> coeficiente range_values
Rule 2     coeficiente -> COEFICIENTE PUNTOYCOMA
Rule 3     range_values -> range_value range_values
Rule 4     range_values -> range_value
Rule 5     range_value -> PNUMERO DOSPUNTOS COEFICIENTE GUION COEFICIENTE PUNTOYCOMA

Terminals, with rules where they appear

COEFICIENTE          : 2 5 5
DOSPUNTOS            : 5
GUION                : 5
NUMERO               : 
PNUMERO              : 5
PUNTOYCOMA           : 2 5
error                : 

Nonterminals, with rules where they appear

coeficiente          : 1
fichero              : 0
range_value          : 3 4
range_values         : 1 3

Parsing method: LALR

state 0

    (0) S' -> . fichero
    (1) fichero -> . coeficiente range_values
    (2) coeficiente -> . COEFICIENTE PUNTOYCOMA

    COEFICIENTE     shift and go to state 3

    fichero                        shift and go to state 1
    coeficiente                    shift and go to state 2

state 1

    (0) S' -> fichero .



state 2

    (1) fichero -> coeficiente . range_values
    (3) range_values -> . range_value range_values
    (4) range_values -> . range_value
    (5) range_value -> . PNUMERO DOSPUNTOS COEFICIENTE GUION COEFICIENTE PUNTOYCOMA

    PNUMERO         shift and go to state 6

    range_values                   shift and go to state 4
    range_value                    shift and go to state 5

state 3

    (2) coeficiente -> COEFICIENTE . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 7


state 4

    (1) fichero -> coeficiente range_values .

    $end            reduce using rule 1 (fichero -> coeficiente range_values .)


state 5

    (3) range_values -> range_value . range_values
    (4) range_values -> range_value .
    (3) range_values -> . range_value range_values
    (4) range_values -> . range_value
    (5) range_value -> . PNUMERO DOSPUNTOS COEFICIENTE GUION COEFICIENTE PUNTOYCOMA

    $end            reduce using rule 4 (range_values -> range_value .)
    PNUMERO         shift and go to state 6

    range_value                    shift and go to state 5
    range_values                   shift and go to state 8

state 6

    (5) range_value -> PNUMERO . DOSPUNTOS COEFICIENTE GUION COEFICIENTE PUNTOYCOMA

    DOSPUNTOS       shift and go to state 9


state 7

    (2) coeficiente -> COEFICIENTE PUNTOYCOMA .

    PNUMERO         reduce using rule 2 (coeficiente -> COEFICIENTE PUNTOYCOMA .)


state 8

    (3) range_values -> range_value range_values .

    $end            reduce using rule 3 (range_values -> range_value range_values .)


state 9

    (5) range_value -> PNUMERO DOSPUNTOS . COEFICIENTE GUION COEFICIENTE PUNTOYCOMA

    COEFICIENTE     shift and go to state 10


state 10

    (5) range_value -> PNUMERO DOSPUNTOS COEFICIENTE . GUION COEFICIENTE PUNTOYCOMA

    GUION           shift and go to state 11


state 11

    (5) range_value -> PNUMERO DOSPUNTOS COEFICIENTE GUION . COEFICIENTE PUNTOYCOMA

    COEFICIENTE     shift and go to state 12


state 12

    (5) range_value -> PNUMERO DOSPUNTOS COEFICIENTE GUION COEFICIENTE . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 13


state 13

    (5) range_value -> PNUMERO DOSPUNTOS COEFICIENTE GUION COEFICIENTE PUNTOYCOMA .

    PNUMERO         reduce using rule 5 (range_value -> PNUMERO DOSPUNTOS COEFICIENTE GUION COEFICIENTE PUNTOYCOMA .)
    $end            reduce using rule 5 (range_value -> PNUMERO DOSPUNTOS COEFICIENTE GUION COEFICIENTE PUNTOYCOMA .)

